<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/first_name"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_box_def"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/prompt_first_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_box_def"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/prompt_last_name"
        android:imeActionLabel="@string/action_register_short"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/email"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_box_def"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/prompt_email"
        android:imeActionLabel="@string/action_register_short"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/wallet_profile"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_box_def"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/prompt_wallet_address"
        android:imeActionLabel="@string/action_register_short"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/username"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_box_def"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/prompt_username"
        android:imeActionLabel="@string/action_register_short"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet_profile" />

    <TextView
        android:id="@+id/tolerance_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="Current risk tolerance (%): 50"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aggressiveness_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="Current investment aggressiveness (%): 50"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarLogin"
        app:layout_constraintVertical_bias="0.147" />

    <SeekBar
        android:id="@+id/seekBarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        android:progressTint="#7C7C7C"
        android:thumbTint="#464746"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tolerance_text"
        app:layout_constraintVertical_bias="0.009" />

    <SeekBar
        android:id="@+id/seekBarLoginAgg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        android:progressTint="#7C7C7C"
        android:thumbTint="#464746"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aggressiveness_text"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="44dp"
        android:enabled="false"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarLoginAgg"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wallet_profile"
        app:layout_constraintStart_toStartOf="@+id/wallet_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>