...
        android:id="@+id/ai_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/ai_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/home_graph_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet"
        app:layout_constraintVertical_bias="0.412" />

...
